# Towards-Applying-ML-Techinque-For-Fault-Localization

./: .gitignore  CMakeLists.txt  README.md  clean_dup.py  interactive_predict.py  splitfiles.py
Code_Snippet_Extarction/: CMakeLists.txt
input/: all.csv
java-parser/: .project  _run_java-parser.sh  pom.xml  run_java-parser.sh
java-parser/src/main/java/uk/ac/shef/: Main.java  Parser.java  Statement.java
scripts/: clean_tmp.sh  generate_code.sh  get_all_lines.sh  get_buggy_lines.sh  get_fixed_lines.sh  merge_all_lines.sh  run_javaparser_function.sh
